--- a/carpeta_prueba2/archivo4.html
+++ b/carpeta_prueba2/archivo4.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>cambio para prueba</title>
+    <title>Title</title>
 </head>
 <body>
-<h1>PRimer titulo para prueba </h1>
 
 </body>
 </html>
