--- a/archivo 2.html
+++ b/archivo 2.html
@@ -6,6 +6,10 @@
 </head>
 <body>
 <h1>PRimer titulo para prueba </h1>
-
+<ol> 
+<li>aritulo1</li>
+<li>aritulo2</li>
+<li>aritulo3</li>
+</ol>
 </body>
 </html>
