cambios en archivo 2 linea 13

--- a/archivo 2.html
+++ b/archivo 2.html
@@ -7,9 +7,11 @@
 <body>
 <h1>PRimer titulo para prueba </h1>
 <ol> 
-<li>aritulo1</li>
-<li>aritulo2</li>
-<li>aritulo3</li>
+<li>aritulo4</li>
+<li>aritulo5</li>
+<li>aritulo6</li>
+<li>articulo7</li>
 </ol>
+
 </body>
 </html>
